--- a/back/.env
+++ b/back/.env
@@ -5,3 +5,4 @@ ACCESS_TOKEN_SECRET='RANDOM_TOKEN_SECRET'
 ACCESS_TOKEN_EXPIRE= '5m'
 REFRESH_TOKEN_SECRET = 'RANDOME_REFRESH_SECRET'
 REFRESH_TOKEN_EXPIRE='1h'
+ROLE_ADMIN=400
